# pytorch-scheduler

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: schedulers.md
examples/: basic_usage.py  visualize_schedulers.py  warmup_composition.py
pytorch_scheduler/: __init__.py  presets.py
pytorch_scheduler/base/: __init__.py  exception.py  scheduler.py  warmup.py
pytorch_scheduler/experimental/: __init__.py  schedule_free.py  sequential_composer.py
pytorch_scheduler/scheduler/: __init__.py  chebyshev.py  cosine_annealing.py  cosine_warmup.py  flat_cosine.py  hyperbolic.py  identity.py  inverse_sqrt.py  k_decay.py  linear_decay.py  polynomial.py  power_decay.py  rex.py  slanted_triangular.py  tanh_decay.py  trapezoidal.py  warmup_hold_cosine.py  wsd.py
pytorch_scheduler/visualization/: __init__.py  plot.py
scripts/: generate_readme_plots.py
tests/: conftest.py  test_contracts.py  test_experimental.py  test_golden.py  test_parameters.py  test_properties.py  test_registry.py  test_schedulers.py  test_visualization.py  test_warmup.py
