[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch-scheduler"
version = "0.2.2"
description = "A comprehensive collection of learning rate schedulers for PyTorch"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "axect" },
]
keywords = [
    "pytorch",
    "learning-rate",
    "scheduler",
    "deep-learning",
    "machine-learning",
    "optimization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.5", "SciencePlots>=2.1"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "pyright>=1.1",
    "matplotlib>=3.5",
    "hypothesis>=6.0",
]

[project.urls]
Homepage = "https://github.com/axect/pytorch-scheduler"
Repository = "https://github.com/axect/pytorch-scheduler"
Changelog = "https://github.com/axect/pytorch-scheduler/blob/main/CHANGELOG.md"

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "SIM",
    "TCH",
    "RUF",
]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pytorch_scheduler --cov-report=term-missing"
